fix: force to use a dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,15 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #0d0d0d;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0d0d0d;
-    --foreground: #ededed;
-  }
+  --background: #0d0d0d;
+  --foreground: #ededed;
 }
 
 body {
